--- a/src/app/components/single-product/single-product.component.html
+++ b/src/app/components/single-product/single-product.component.html
@@ -20,7 +20,7 @@
                                     *ngFor="let item of singleProduct?.link"
                                     style="width: 624px; opacity: 1; transform: translate3d(0px, 0px, 0px);"
                                     role="group" aria-label="1 / 4">
-                                    <img src="https://localhost:7192/api/GetImageControllers/get-images-cart/{{item.link}}"
+                                    <img src="https://localhost:7192/api/GetImage/get-images-cart/{{item.link}}"
                                         class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </div>
@@ -36,7 +36,7 @@
                                 <div class="swiper-slide swiper-slide-visible swiper-slide-active swiper-slide-thumb-active"
                                     style="width: 202.667px; margin-right: 8px;" role="group" aria-label="1 / 4"
                                     *ngFor="let item of singleProduct?.link">
-                                    <img src="https://localhost:7192/api/GetImageControllers/get-images-cart/{{item.link}}"
+                                    <img src="https://localhost:7192/api/GetImage/get-images-cart/{{item.link}}"
                                         class="img-fluid" style="width: 100%; height: 100%; object-fit: cover;">
                                 </div>
                             </div>
@@ -96,29 +96,24 @@
 
                                 <div class="input-group product-qty align-items-center w-25">
                                     <span class="input-group-btn">
-                                        <button type="button" class="btn btn-light"
-                                        (click)="ChangeQuantity(quantity)"
-                                            >
+                                        <button type="button" class="btn btn-light" (click)="ChangeQuantity(quantity)">
                                             -
                                         </button>
                                     </span>
                                     <input type="text" id="quantity" name="quantity"
-                                        class="form-control input-number text-center p-2 mx-1" 
-                                        [(ngModel)]="quantity"
+                                        class="form-control input-number text-center p-2 mx-1" [(ngModel)]="quantity"
                                         disabled>
                                     <span class="input-group-btn">
                                         <button type="button" class="btn btn-light"
-                                        (click)="ChangeQuantity(quantity, 'plus')"
-                                        >
+                                            (click)="ChangeQuantity(quantity, 'plus')">
                                             +
                                         </button>
                                     </span>
                                 </div>
 
                                 <div class="d-flex flex-wrap pt-4">
-                                    <a type="button"
-                                    (click)="AddToCarts(singleProduct , quantity)"
-                                    class="btn-cart me-3 px-4 pt-3 pb-3">
+                                    <a type="button" (click)="AddToCarts(singleProduct , quantity)"
+                                        class="btn-cart me-3 px-4 pt-3 pb-3">
                                         <h5 class="text-uppercase m-0">
                                             Thêm vào giỏ hàng
                                         </h5>
@@ -147,9 +142,10 @@
                 <div _ngcontent-ng-c2327624737="" class="swiper-slide" *ngFor="let item of products">
                     <div _ngcontent-ng-c2327624737="" class="card 
                     position-relative">
-                        <a _ngcontent-ng-c2327624737="" href="single-product.html" style="width: 100%; height: 20rem;">
-                            <img _ngcontent-ng-c2327624737=""
-                                src="https://localhost:7192/api/GetImageControllers/get-images-cart/{{item.link[0].link}}"
+                        <a _ngcontent-ng-c2327624737="" [routerLink]="['/single-product/' + item.id]"
+                            style="width: 100%; height: 20rem;">
+                            <img _ngcontent-ng-c2327624737="" *ngIf="item.link.length > 0"
+                                src="https://localhost:7192/api/GetImage/get-images-cart/{{item.link[0].link}}"
                                 style="width: 100%; height: 100%; object-fit: cover;" alt="image"
                                 class="img-fluid rounded-4">
                         </a>
@@ -165,9 +161,8 @@
                                     ':'symbol':'1.0-0'}}đ
                                 </h3>
                                 <div _ngcontent-ng-c2327624737="" class="d-flex flex-wrap mt-3">
-                                    <a _ngcontent-ng-c2327624737="" 
-                                    (click)="AddToCart(item)"
-                                    class="btn-cart me-3 px-4 pt-3 pb-3">
+                                    <a _ngcontent-ng-c2327624737="" (click)="AddToCart(item)"
+                                        class="btn-cart me-3 px-4 pt-3 pb-3">
                                         <h5 _ngcontent-ng-c2327624737="" class="text-uppercase m-0">
                                             Thêm vào giỏ
                                         </h5>
