--- a/src/app/components/dog-page/dog-page.component.html
+++ b/src/app/components/dog-page/dog-page.component.html
@@ -2,34 +2,30 @@
   <div class="container pb-5">
 
     <div class="section-header d-md-flex justify-content-between align-items-center mb-3">
-      <h2 class="display-3 fw-normal">Shop Chó Cảnh</h2>
+      <h2 class="display-3 fw-normal">Shop {{name}} </h2>
 
     </div>
 
     <div class="products-carousel swiper">
       <div class="swiper-wrapper">
-
-        <div class="swiper-slide">
-
+        <div class="swiper-slide" *ngFor="let item of listProducts">
           <div class="card position-relative">
-            <a href="single-product.html"><img src="./assets/images/item1.jpg" class="img-fluid rounded-4"
-                alt="image"></a>
+            <a [routerLink]="['/single-product/' + item.id]" style="width: 100%; height: 20rem;">
+              <img src="https://localhost:7192/api/GetImage/get-images-cart/{{item.link[0].link}}"
+                *ngIf="item.link.length > 0" class="img-fluid rounded-4" alt="image"
+                style="width: 100%; height: 100%; object-fit: cover;">
+            </a>
             <div class="card-body p-0">
-              <a href="single-product.html">
-                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
+              <a [routerLink]="['/single-product/' + item.id]">
+                <h3 class="card-title pt-4 m-0"> {{item.name}} </h3>
               </a>
-
               <div class="card-text">
-
-
-                <h3 class="secondary-font text-primary">200.000 VND</h3>
+                <h3 class="secondary-font text-primary">{{item.price | currency:'
+                  ':'symbol':'1.0-0'}} VND</h3>
 
                 <div class="d-flex flex-wrap mt-3">
-                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
+                  <a (click)="AddToCart(item)" class="btn-cart me-3 px-4 pt-3 pb-3">
+                    <h5 class="text-uppercase m-0">Thêm vào giỏ</h5>
                   </a>
                 </div>
 
@@ -39,155 +35,6 @@
             </div>
           </div>
         </div>
-        <div class="swiper-slide">
-          <!--  -->
-          <div class="card position-relative">
-            <a href="single-product.html"><img src="./assets/images/item2.jpg" class="img-fluid rounded-4"
-                alt="image"></a>
-            <div class="card-body p-0">
-              <a href="single-product.html">
-                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
-              </a>
-
-              <div class="card-text">
-
-
-                <h3 class="secondary-font text-primary">200.000 VND</h3>
-
-                <div class="d-flex flex-wrap mt-3">
-                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
-                </div>
-
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-
-          <div class="card position-relative">
-            <a href="single-product.html"><img src="./assets/images/item3.jpg" class="img-fluid rounded-4"
-                alt="image"></a>
-            <div class="card-body p-0">
-              <a href="single-product.html">
-                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
-              </a>
-
-              <div class="card-text">
-
-
-                <h3 class="secondary-font text-primary">200.000 VND</h3>
-
-                <div class="d-flex flex-wrap mt-3">
-                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
-                </div>
-
-
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <!--  -->
-          <div class="card position-relative">
-            <a href="single-product.html"><img src="./assets/images/item4.jpg" class="img-fluid rounded-4"
-                alt="image"></a>
-            <div class="card-body p-0">
-              <a href="single-product.html">
-                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
-              </a>
-
-              <div class="card-text">
-
-
-                <h3 class="secondary-font text-primary">200.000 VND</h3>
-
-                <div class="d-flex flex-wrap mt-3">
-                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
-                </div>
-
-
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <!--  -->
-          <div class="card position-relative">
-            <a href="single-product.html"><img src="./images/item7.jpg" class="img-fluid rounded-4" alt="image"></a>
-            <div class="card-body p-0">
-              <a href="single-product.html">
-                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
-              </a>
-
-              <div class="card-text">
-
-
-                <h3 class="secondary-font text-primary">200.000 VND</h3>
-
-                <div class="d-flex flex-wrap mt-3">
-                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
-                </div>
-
-
-              </div>
-
-            </div>
-          </div>
-        </div>
-        <div class="swiper-slide">
-          <!--  -->
-          <div class="card position-relative">
-            <a href="single-product.html"><img src="./assets/images/item8.jpg" class="img-fluid rounded-4"
-                alt="image"></a>
-            <div class="card-body p-0">
-              <a href="single-product.html">
-                <h3 class="card-title pt-4 m-0">Grey hoodie</h3>
-              </a>
-
-              <div class="card-text">
-
-
-                <h3 class="secondary-font text-primary">200.000 VND</h3>
-
-                <div class="d-flex flex-wrap mt-3">
-                  <a href="#" class="btn-cart me-3 px-4 pt-3 pb-3">
-                    <h5 class="text-uppercase m-0">Thêm vào giỏ </h5>
-                  </a>
-                  <a href="#" class="btn-wishlist px-4 pt-3 ">
-                    <iconify-icon icon="fluent:heart-28-filled" class="fs-5"></iconify-icon>
-                  </a>
-                </div>
-
-
-              </div>
-
-            </div>
-          </div>
-        </div>
-
       </div>
     </div>
     <!-- / products-carousel -->
