--- a/src/app/components/header/header.component.html
+++ b/src/app/components/header/header.component.html
@@ -99,14 +99,14 @@
               <a [routerLink]="['/']" class="nav-link active">Trang Chủ</a>
             </li>
             <li class="nav-item">
-              <a [routerLink]="['/shop']" class="nav-link">Cửa hàng</a>
+              <a [routerLink]="['/shop/0/1']" class="nav-link">Cửa hàng</a>
             </li>
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle" role="button" id="pages" data-bs-toggle="dropdown"
                 aria-expanded="false">Sản Phẩm</a>
               <ul class="dropdown-menu" aria-labelledby="pages">
                 <li *ngFor="let item of categoris">
-                  <a href="" class="dropdown-item"> {{item.name}} <span
+                  <a [routerLink]="['dog-page/' + item.id]" class="dropdown-item"> {{item.name}} <span
                       class="badge bg-success text-dark ms-2">HOT</span></a>
                 </li>
 
