--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -50,17 +50,9 @@
                 <!-- phẩn trang -->
                 <nav class="navigation paging-navigation text-center mt-5" role="navigation">
                     <div class="pagination loop-pagination d-flex justify-content-center align-items-center">
-                        <a href="#" class="pagination-arrow d-flex align-items-center mx-3">
-                            <iconify-icon icon="ic:baseline-keyboard-arrow-left"
-                                class="pagination-arrow fs-1"></iconify-icon>
-                        </a>
-                        <span aria-current="page" class="page-numbers mt-2 fs-3 mx-3 current">1</span>
-                        <a class="page-numbers mt-2 fs-3 mx-3" href="#">2</a>
-                        <a class="page-numbers mt-2 fs-3 mx-3" href="#">3</a>
-                        <a href="#" class="pagination-arrow d-flex align-items-center mx-3">
-                            <iconify-icon icon="ic:baseline-keyboard-arrow-right"
-                                class="pagination-arrow fs-1"></iconify-icon>
-                        </a>
+                        <a class="page-numbers mt-2 fs-3 mx-3" [class.current]="item == page" type="button"
+                            (click)="ChangeRouter(item)" *ngFor="let item of listNumber">
+                            {{item}} </a>
                     </div>
                 </nav>
                 <!-- phẩn trang -->
@@ -88,10 +80,11 @@
                         <h4 class="widget-title">Danh mục sản phẩm</h4>
                         <ul class="product-categories sidebar-list list-unstyled">
                             <li class="cat-item">
-                                <a type="button" (click)="GetByCategory(0)">All</a>
+                                <a type="button" [class.active]="id == 0" (click)="GetByCategory(0)">Tất cả</a>
                             </li>
                             <li class="cat-item" *ngFor="let item of listCategorys">
-                                <a type="button" (click)="GetByCategory(item.id)" class="nav-link"> {{item.name}} </a>
+                                <a type="button" (click)="GetByCategory(item.id)" class="nav-link"
+                                    [class.active]="id == item.id"> {{item.name}} </a>
                             </li>
                         </ul>
                     </div>
