--- a/src/app/components/shop/shop.component.html
+++ b/src/app/components/shop/shop.component.html
@@ -16,7 +16,7 @@
                     <div class="col-md-4 my-4" *ngFor="let item of listProducts">
                         <div class="card position-relative">
                             <a [routerLink]="['/single-product/' + item.id]" style="width: 100%; height: 20rem;">
-                                <img src="https://localhost:7192/api/GetImage/get-images-cart/{{item.link}}"
+                                <img src="https://api-cs5-server.tryasp.net/GetImage/get-images-cart/{{item.link}}"
                                     *ngIf="item.link" class="img-fluid rounded-4" alt="image"
                                     style="width: 100%; height: 100%; object-fit: cover;">
                             </a>
